[package]
name = "yamllint-rs"
version = "0.1.0"
edition = "2021"
description = "A YAML linter and formatter written in Rust"
authors = ["Your Name <email@example.com>"]
license = "MIT"

[[bin]]
name = "yamllint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
colored = "2.1"
ignore = "0.4"
lazy_static = "1.4"
walkdir = "2.4"
