[package]
name = "yamllint-rs"
version = "0.2.0"
edition = "2021"
description = "A fast YAML linter, formatter, and converter written in Rust"
authors = ["Your Name <email@example.com>"]
license = "MIT"

[[bin]]
name = "yamllint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
colored = "2.1"
ignore = "0.4"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
